# sys-triage

./: Cargo.toml  LICENSE  README.md  triage.yaml
src/: cli.rs  config.rs  cpu.rs  disk.rs  main.rs  network.rs
